--- a/rainshop/requirements.txt
+++ b/rainshop/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.4.1
 astroid==2.7.2
 atomicwrites==1.4.0
 attrs==21.2.0
+Babel==2.9.1
 backports.entry-points-selectable==1.1.0
 billiard==3.6.4.0
 celery==5.1.2
@@ -22,7 +23,6 @@ distlib==0.3.2
 dj-database-url==0.5.0
 dj-rest-auth==2.1.11
 Django==3.2.6
-gunicorn==20.1.0
 django-autoslug==1.9.8
 django-cities-light==3.8.1
 django-cors-headers==3.7.0
@@ -32,6 +32,7 @@ django-debug-toolbar==3.2
 django-environ==0.4.5
 django-extensions==3.1.3
 django-filter==2.4.0
+django-money==2.1
 django-phone-field==1.8.1
 django-redis==5.0.0
 django-rest-swagger==2.2.0
@@ -47,6 +48,7 @@ et-xmlfile==1.1.0
 factory-boy==3.2.0
 Faker==8.11.0
 filelock==3.0.12
+gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
 iniconfig==1.1.1
@@ -69,6 +71,7 @@ progressbar2==3.53.1
 prompt-toolkit==3.0.19
 psycopg2==2.9.1
 py==1.10.0
+py-moneyed==1.2
 PyJWT==2.1.0
 pylint==2.10.2
 pylint-django==2.4.4
